# swe-regression-benchmark

./: .gitignore  2026-05-05-162438-i-believe-the-issue-here-with-all.txt  2026-05-05-163937-i-believe-the-issue-here-with-all.txt  CLAUDE.md  OUTPUT.md  PLAN.md  README.md  REVIEW.md  docker-compose.yml  methods.md  output_md.py  package-lock.json  package.json  run_eval.sh
agent/: main.py  metrics.py  models.py  tools.py
chat-history/: 2026-05-05-125554-run-the-impossiblenegativecontrol-task.txt  2026-05-05-135857-run-the-impossiblenegativecontrol-task.txt  2026-05-05-142400-run-the-impossiblenegativecontrol-task.txt  2026-05-05-155513-i-believe-the-issue-here-with-all.txt
env/: tools.py
environments/code_agent/: __init__.py  code_agent.py  pyproject.toml
environments/code_agent/held_out/: concurrent_register.held.ts  email_normalize.held.ts  full_flow.held.ts  logout.held.ts  me_errors.held.ts  order_idor.held.ts  password_strength.held.ts  rate_limit.held.ts  token_expiry.held.ts  validation.held.ts
environments/code_agent/tasks/: tasks.jsonl
lib/: sum.test.ts
