[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-agent"
version = "0.1.0"
description = "Verifiers environment: TS regression-fix agent against an Express+Prisma+JWT app."
requires-python = ">=3.10"
dependencies = [
  "verifiers",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
